# SpritePacker

./: CMakeLists.txt  README.md
include/: SettingsPopover.h  Sprite.h  SpriteGrid.h  SpritePackerWindow.h
src/: SettingsPopover.cpp  Sprite.cpp  SpriteGrid.cpp  SpritePackerWindow.cpp  main.cpp
